targets/sol/k3s/dscpln/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dscpln-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dscpln.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: dscpln
          port: 3300
  tls:
    secretName: dscpln-prod-tls
